// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests with no other session 1`] = `
<body>
  <div>
    <div
      class="MuiContainer-root makeStyles-root-1 MuiContainer-maxWidthLg"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root makeStyles-calendar-2 MuiGrid-item MuiGrid-grid-xs-4"
            />
            <div
              class="MuiGrid-root makeStyles-current-3 MuiGrid-item MuiGrid-grid-xs-4"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-142 MuiPaper-rounded"
              >
                <div
                  class="MuiGrid-root makeStyles-calendar-143 MuiGrid-container MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root makeStyles-center-144 MuiGrid-item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-h4"
                    >
                      16
                    </span>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Juli
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root makeStyles-calendar-2 MuiGrid-item MuiGrid-grid-xs-4"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-container"
          >
            <div
              class="MuiGrid-root makeStyles-form-4 MuiGrid-item MuiGrid-grid-xs-12"
            >
              <form>
                <div
                  class="MuiGrid-root makeStyles-center-175 MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                        data-shrink="true"
                        for="TrainingDateInput"
                      >
                        Datum
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-232 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-233"
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          id="TrainingDateInput"
                          type="date"
                          value="2019-07-16"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                        data-shrink="true"
                        for="TrainingPayedAmountInput"
                      >
                        Bezahlt
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-232 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-233"
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          id="TrainingPayedAmountInput"
                          type="number"
                          value="15"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                        data-shrink="false"
                        for="TrainingDescriptionInput"
                      >
                        Beschreibung
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-232 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-233"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <textarea
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
                          id="TrainingDescriptionInput"
                          rows="1"
                        />
                        <textarea
                          aria-hidden="true"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
                          readonly=""
                          style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; width: 100%;"
                          tabindex="-1"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Hinzufügen
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`snapshot tests with session in past 1`] = `
<body>
  <div />
  <div>
    <div
      class="MuiContainer-root makeStyles-root-273 MuiContainer-maxWidthLg"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root makeStyles-calendar-274 MuiGrid-item MuiGrid-grid-xs-4"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-414 MuiPaper-rounded"
              >
                <div
                  class="MuiGrid-root makeStyles-calendar-415 MuiGrid-container MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root makeStyles-center-416 MuiGrid-item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-h4"
                    >
                      16
                    </span>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Juli
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root makeStyles-current-275 MuiGrid-item MuiGrid-grid-xs-4"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-414 MuiPaper-rounded"
              >
                <div
                  class="MuiGrid-root makeStyles-calendar-415 MuiGrid-container MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root makeStyles-center-416 MuiGrid-item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-h4"
                    >
                      16
                    </span>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Juli
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root makeStyles-calendar-274 MuiGrid-item MuiGrid-grid-xs-4"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-container"
          >
            <div
              class="MuiGrid-root makeStyles-form-276 MuiGrid-item MuiGrid-grid-xs-12"
            >
              <form>
                <div
                  class="MuiGrid-root makeStyles-center-447 MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                        data-shrink="true"
                        for="TrainingDateInput"
                      >
                        Datum
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-504 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-505"
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          id="TrainingDateInput"
                          type="date"
                          value="2019-07-16"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                        data-shrink="true"
                        for="TrainingPayedAmountInput"
                      >
                        Bezahlt
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-504 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-505"
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          id="TrainingPayedAmountInput"
                          type="number"
                          value="15"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                        data-shrink="false"
                        for="TrainingDescriptionInput"
                      >
                        Beschreibung
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-504 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-505"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <textarea
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
                          id="TrainingDescriptionInput"
                          rows="1"
                        />
                        <textarea
                          aria-hidden="true"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
                          readonly=""
                          style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; width: 100%;"
                          tabindex="-1"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Hinzufügen
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
